--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@astrojs/mdx": "^3.0.1",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
+    "@astrojs/solid-js": "^4.2.0",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.9.1",
+    "solid-js": "^1.8.17",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
